@@ -21,6 +21,7 @@ import org.bukkit.Color;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
 import org.bukkit.RegionAccessor;
+import org.bukkit.Registry;
 import org.bukkit.Statistic;
 import org.bukkit.Tag;
 import org.bukkit.UnsafeValues;
@@ -29,7 +30,6 @@ import org.bukkit.advancement.Advancement;
 import org.bukkit.attribute.Attributable;
 import org.bukkit.attribute.Attribute;
 import org.bukkit.attribute.AttributeModifier;
-import org.bukkit.block.Biome;
 import org.bukkit.block.data.BlockData;
 import org.bukkit.command.CommandSender;
 import org.bukkit.damage.DamageSource;
@@ -40,12 +40,15 @@ import org.bukkit.entity.Player;
 import org.bukkit.inventory.CreativeCategory;
 import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.material.MaterialData;
 import org.bukkit.plugin.InvalidPluginException;
 import org.bukkit.plugin.Plugin;
 import org.bukkit.plugin.PluginDescriptionFile;
 import org.bukkit.plugin.java.JavaPlugin;
 import org.bukkit.potion.PotionType;
+import org.bukkit.util.io.BukkitObjectInputStream;
+import org.bukkit.util.io.BukkitObjectOutputStream;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -53,20 +56,20 @@ import org.mockbukkit.mockbukkit.damage.DamageSourceBuilderMock;
 import org.mockbukkit.mockbukkit.exception.ItemSerializationException;
 import org.mockbukkit.mockbukkit.exception.UnimplementedOperationException;
 import org.mockbukkit.mockbukkit.inventory.ItemStackMock;
+import org.mockbukkit.mockbukkit.inventory.SerializableMeta;
+import org.mockbukkit.mockbukkit.inventory.serializer.SerializationUtils;
 import org.mockbukkit.mockbukkit.plugin.lifecycle.event.LifecycleEventManagerMock;
 import org.mockbukkit.mockbukkit.potion.InternalPotionDataMock;
-import org.mockbukkit.mockbukkit.util.io.BukkitObjectInputStreamMock;
-import org.mockbukkit.mockbukkit.util.io.BukkitObjectOutputStreamMock;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
-import java.nio.ByteBuffer;
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.function.BooleanSupplier;
 
@@ -78,7 +81,7 @@ public class UnsafeValuesMock implements UnsafeValues
 {
 
 	private static final List<String> COMPATIBLE_API_VERSIONS =
-			Arrays.asList(
+			List.of(
 					"1.13",
 					"1.14",
 					"1.15",
@@ -89,9 +92,9 @@ public class UnsafeValuesMock implements UnsafeValues
 					"1.20",
 					"1.21"
 			);
+	private static final String PROPERTY_SCHEMA_VERSION = "schema_version";
 
 	private String minimumApiVersion = "none";
-	private Biome customBiome;
 
 	@Override
 	public @NotNull ComponentFlattener componentFlattener()
@@ -135,12 +138,11 @@ public class UnsafeValuesMock implements UnsafeValues
 	}
 
 	@Override
-	public Component resolveWithContext(Component component, CommandSender context, Entity scoreboardSubject, boolean bypassPermissions) throws IOException
+	public Component resolveWithContext(Component component, CommandSender context, Entity scoreboardSubject, boolean bypassPermissions)
 	{
 		// TODO Auto-generated method stub
 		throw new UnimplementedOperationException();
 	}
-
 
 	@Override
 	public Material toLegacy(Material material)
@@ -272,7 +274,6 @@ public class UnsafeValuesMock implements UnsafeValues
 		throw new UnimplementedOperationException();
 	}
 
-
 	@Override
 	public VersionFetcher getVersionFetcher()
 	{
@@ -297,9 +298,9 @@ public class UnsafeValuesMock implements UnsafeValues
 		final ByteArrayOutputStream bao = new ByteArrayOutputStream();
 		try
 		{
-			bao.write(ByteBuffer.allocate(4).putInt(item.getAmount()).array());
-			final ObjectOutputStream oos = new BukkitObjectOutputStreamMock(bao);
-			oos.writeObject(item);
+			@NotNull Map<String, Object> stack = this.serializeStack(item);
+			final ObjectOutputStream oos = new BukkitObjectOutputStream(bao);
+			oos.writeObject(stack);
 			return bao.toByteArray();
 		}
 		catch (IOException e)
@@ -316,11 +317,13 @@ public class UnsafeValuesMock implements UnsafeValues
 		final ByteArrayInputStream bai = new ByteArrayInputStream(data);
 		try
 		{
-			int amount = ByteBuffer.wrap(bai.readNBytes(4)).getInt();
-			final ObjectInputStream ois = new BukkitObjectInputStreamMock(bai);
-			ItemStackMock stack = (ItemStackMock) ois.readObject();
-			stack.setAmount(amount);
-			return stack;
+			final ObjectInputStream ois = new BukkitObjectInputStream(bai);
+			if (bai.available() <= 0)
+			{
+				return null;
+			}
+			Map<String, Object> stack = (Map<String, Object>) ois.readObject();
+			return this.deserializeStack(stack);
 		}
 		catch (IOException | ClassNotFoundException e)
 		{
@@ -331,15 +334,15 @@ public class UnsafeValuesMock implements UnsafeValues
 	@Override
 	public @NotNull JsonObject serializeItemAsJson(@NotNull ItemStack itemStack)
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		Map<String, Object> map = serializeStack(itemStack);
+		return SerializationUtils.createDefaultBuilder().toJsonTree(map).getAsJsonObject();
 	}
 
 	@Override
 	public @NotNull ItemStack deserializeItemFromJson(@NotNull JsonObject jsonObject) throws IllegalArgumentException
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		Map<String, Object> args = SerializationUtils.createDefaultBuilder().fromJson(jsonObject, Map.class);
+		return deserializeStack(args);
 	}
 
 	@Override
@@ -424,11 +427,7 @@ public class UnsafeValuesMock implements UnsafeValues
 		{
 			Material material = itemStack.getType();
 			String edgeCaseHandledTranslationKey = handleTranslateItemEdgeCases(material);
-			if (edgeCaseHandledTranslationKey != null)
-			{
-				return edgeCaseHandledTranslationKey;
-			}
-			return formatTranslatable("item", material, true);
+			return Objects.requireNonNullElseGet(edgeCaseHandledTranslationKey, () -> formatTranslatable("item", material, true));
 		}
 		else if (itemStack.getType().isBlock())
 		{
@@ -609,13 +608,57 @@ public class UnsafeValuesMock implements UnsafeValues
 	@Override
 	public @NotNull Map<String, Object> serializeStack(ItemStack itemStack)
 	{
-		throw new UnimplementedOperationException();
+		if (itemStack.isEmpty())
+		{
+			return Map.of(
+					"id", "minecraft:air",
+					"DataVersion", this.getDataVersion(),
+					PROPERTY_SCHEMA_VERSION, 1);
+		}
+
+		Map<String, Object> result = new HashMap<>();
+		result.put("id", itemStack.getType().getKey().asString());
+		result.put("count", itemStack.getAmount());
+		result.put("DataVersion", this.getDataVersion());
+		result.put(PROPERTY_SCHEMA_VERSION, 1);
+		result.put("components", itemStack.getItemMeta().serialize());
+
+		return result;
 	}
 
 	@Override
 	public @NotNull ItemStack deserializeStack(@NotNull Map<String, Object> args)
 	{
-		throw new UnimplementedOperationException();
+		@SuppressWarnings({ "java:S1481", "java:S1854" })
+		final int version = args.getOrDefault(PROPERTY_SCHEMA_VERSION, 1) instanceof Number val ? val.intValue() : -1;
+		final String id = (String) args.get("id");
+		final int amount = ((Number) args.get("count")).intValue();
+		final Map<String, Object> components = (Map<String, Object>) args.get("components");
+
+		NamespacedKey key = NamespacedKey.fromString(id);
+		Material material = Registry.MATERIAL.get(key);
+
+		if (material == null || material.isAir())
+		{
+			return ItemStackMock.empty();
+		}
+
+		@NotNull ItemStack itemstack = ItemStack.of(material, amount);
+		if (components != null)
+		{
+			try
+			{
+				@Nullable ItemMeta meta = SerializableMeta.deserialize(components);
+				Preconditions.checkArgument(meta != null, "Invalid item meta type");
+				itemstack.setItemMeta(meta);
+			}
+			catch (Exception e)
+			{
+				throw new IllegalArgumentException("Error while deserializing item meta", e);
+			}
+		}
+
+		return itemstack;
 	}
 
 	@Override
