@@ -6,12 +6,14 @@ import io.papermc.paper.event.world.WorldGameRuleChangeEvent;
 import io.papermc.paper.world.MoonPhase;
 import org.bukkit.Chunk;
 import org.bukkit.ChunkSnapshot;
+import org.bukkit.Color;
 import org.bukkit.Difficulty;
 import org.bukkit.Effect;
 import org.bukkit.GameRule;
 import org.bukkit.HeightMap;
 import org.bukkit.Location;
 import org.bukkit.Material;
+import org.bukkit.Particle;
 import org.bukkit.Sound;
 import org.bukkit.World;
 import org.bukkit.block.Biome;
@@ -42,6 +44,7 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.metadata.FixedMetadataValue;
 import org.bukkit.util.BoundingBox;
 import org.bukkit.util.Consumer;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -105,6 +108,7 @@ import org.mockbukkit.mockbukkit.entity.GlowItemFrameMock;
 import org.mockbukkit.mockbukkit.entity.GlowSquidMock;
 import org.mockbukkit.mockbukkit.entity.GoatMock;
 import org.mockbukkit.mockbukkit.entity.GuardianMock;
+import org.mockbukkit.mockbukkit.entity.HappyGhastMock;
 import org.mockbukkit.mockbukkit.entity.HopperMinecartMock;
 import org.mockbukkit.mockbukkit.entity.HorseMock;
 import org.mockbukkit.mockbukkit.entity.HuskMock;
@@ -195,6 +199,7 @@ import org.mockbukkit.mockbukkit.entity.boat.SpruceBoatMock;
 import org.mockbukkit.mockbukkit.entity.boat.SpruceChestBoatMock;
 import org.mockbukkit.mockbukkit.inventory.ItemStackMock;
 import org.mockbukkit.mockbukkit.plugin.PluginMock;
+import org.mockbukkit.mockbukkit.util.SpawnedParticle;
 import org.opentest4j.AssertionFailedError;
 
 import java.util.Arrays;
@@ -301,7 +306,7 @@ class WorldMockTest
 		List<Entity> entities = world.getEntities();
 		assertNotNull(entities);
 		assertEquals(1, entities.size());
-		assertSame(player, entities.get(0));
+		assertSame(player, entities.getFirst());
 	}
 
 	@Test
@@ -515,12 +520,13 @@ class WorldMockTest
 	void spawnZombieTest()
 	{
 		WorldMock world = new WorldMock();
+		assertTrue(world.getEntities().isEmpty());
 		Location location = new Location(world, 100, 20, 50);
 		Entity zombie = world.spawnEntity(location, EntityType.ZOMBIE);
 		assertEquals(100, zombie.getLocation().getBlockX());
 		assertEquals(20, zombie.getLocation().getBlockY());
 		assertEquals(50, zombie.getLocation().getBlockZ());
-		assertTrue(world.getEntities().size() > 0);
+		assertFalse(world.getEntities().isEmpty());
 	}
 
 	@Test
@@ -587,7 +593,34 @@ class WorldMockTest
 	{
 		WorldMock world = new WorldMock();
 		assertEquals(0L, world.getFullTime(), "World time should be zero");
+		assertEquals(0L, world.getGameTime(), "Game time should be zero");
 		assertEquals(0L, world.getTime(), "Day time should be zero");
+	}
+
+	@Test
+	void aConnectedWorldsTimeIncreasesWhenServerTicks()
+	{
+		WorldMock world = server.addSimpleWorld("bumba");
+
+		server.getScheduler().performOneTick();
+		assertEquals(1L, world.getFullTime(), "World time should have increased");
+		assertEquals(1L, world.getGameTime(), "Game time should have increased");
+		assertEquals(1L, world.getTime(), "Day time should have increased");
+
+		server.getScheduler().performTicks(25000);
+		assertEquals(25001L, world.getFullTime(), "World time should have increased");
+		assertEquals(25001L, world.getGameTime(), "Game time should have increased");
+		assertEquals(1001L, world.getTime(), "Day time should have rotated");
+	}
+
+	@Test
+	void aNonConnectedWorldsTimeDoesNotIncreaseWhenServerTicks()
+	{
+		WorldMock world = new WorldMock();
+
+		server.getScheduler().performOneTick();
+		assertEquals(0L, world.getFullTime(), "World time should have increased");
+		assertEquals(0L, world.getTime(), "Day time should have increased");
 	}
 
 	@Test
@@ -616,6 +649,20 @@ class WorldMockTest
 		world.setTime(12000L);
 		assertEquals(12000L, world.getTime());
 		assertEquals(3L * 24000L + 12000L, world.getFullTime());
+	}
+
+	@Test
+	void isDayTime()
+	{
+		WorldMock world = new WorldMock();
+
+		// Noon
+		world.setTime(6000L);
+		assertTrue(world.isDayTime());
+
+		// Midnight
+		world.setTime(18000L);
+		assertFalse(world.isDayTime());
 	}
 
 	@Test
@@ -802,9 +849,7 @@ class WorldMockTest
 	{
 		WorldMock world = new WorldMock(Material.GRASS_BLOCK, Biome.JUNGLE, 0, 256);
 		assertThrows(IllegalArgumentException.class, () ->
-		{
-			world.setBiome(0, 0, 0, Biome.CUSTOM);
-		});
+				world.setBiome(0, 0, 0, Biome.CUSTOM));
 	}
 
 	@Test
@@ -905,9 +950,7 @@ class WorldMockTest
 		WorldMock world = new WorldMock(Material.DIRT, 3);
 		Location loc = new Location(world, 0, 0, 0);
 		assertThrows(IllegalArgumentException.class, () ->
-		{
-			world.playEffect(loc, Effect.STEP_SOUND, null);
-		});
+				world.playEffect(loc, Effect.STEP_SOUND, null));
 	}
 
 	@Test
@@ -916,13 +959,10 @@ class WorldMockTest
 		WorldMock world = new WorldMock(Material.DIRT, 3);
 		Location loc = new Location(world, 0, 0, 0);
 		assertThrows(IllegalArgumentException.class, () ->
-		{
-			world.playEffect(loc, Effect.STEP_SOUND, 1.0f);
-		});
+				world.playEffect(loc, Effect.STEP_SOUND, 1.0f));
 	}
 
 	@Test
-	@SuppressWarnings("UnstableApiUsage")
 	void testSendPluginMessage()
 	{
 		WorldMock world = new WorldMock(Material.DIRT, 3);
@@ -1086,7 +1126,7 @@ class WorldMockTest
 		WorldMock world = new WorldMock();
 		Entity zombie = world.spawnEntity(new Location(world, 0, 5, 0), EntityType.ZOMBIE);
 		assertEquals(1, world.getEntities().size());
-		assertEquals(zombie, world.getEntities().get(0));
+		assertEquals(zombie, world.getEntities().getFirst());
 	}
 
 	@Test
@@ -1345,6 +1385,7 @@ class WorldMockTest
 				Arguments.of(EntityType.TADPOLE, TadpoleMock.class),
 				Arguments.of(EntityType.MOOSHROOM, MushroomCowMock.class),
 				Arguments.of(EntityType.GHAST, GhastMock.class),
+				Arguments.of(EntityType.HAPPY_GHAST, HappyGhastMock.class),
 				Arguments.of(EntityType.FOX, FoxMock.class),
 				Arguments.of(EntityType.FROG, FrogMock.class),
 				Arguments.of(EntityType.CAT, CatMock.class),
@@ -1530,17 +1571,13 @@ class WorldMockTest
 		world.setGameRuleValue("announceAdvancements", "false");
 		assertEquals("false", world.getGameRuleValue("announceAdvancements"));
 		assertThat(server.getPluginManager(), hasFiredFilteredEvent(WorldGameRuleChangeEvent.class, worldGameRuleChangeEvent ->
-		{
-			return worldGameRuleChangeEvent.getGameRule().equals(GameRule.ANNOUNCE_ADVANCEMENTS)
-					&& worldGameRuleChangeEvent.getValue().equals("false");
-		}));
+				worldGameRuleChangeEvent.getGameRule().equals(GameRule.ANNOUNCE_ADVANCEMENTS)
+						&& worldGameRuleChangeEvent.getValue().equals("false")));
 		world.setGameRuleValue("announceAdvancements", "true");
 		assertEquals("true", world.getGameRuleValue("announceAdvancements"));
 		assertThat(server.getPluginManager(), hasFiredFilteredEvent(WorldGameRuleChangeEvent.class, worldGameRuleChangeEvent ->
-		{
-			return worldGameRuleChangeEvent.getGameRule().equals(GameRule.ANNOUNCE_ADVANCEMENTS)
-					&& worldGameRuleChangeEvent.getValue().equals("true");
-		}));
+				worldGameRuleChangeEvent.getGameRule().equals(GameRule.ANNOUNCE_ADVANCEMENTS)
+						&& worldGameRuleChangeEvent.getValue().equals("true")));
 	}
 
 	@Test
@@ -1566,10 +1603,8 @@ class WorldMockTest
 		world.setGameRuleValue("randomTickSpeed", "10");
 		assertEquals("10", world.getGameRuleValue("randomTickSpeed"));
 		assertThat(server.getPluginManager(), hasFiredFilteredEvent(WorldGameRuleChangeEvent.class, worldGameRuleChangeEvent ->
-		{
-			return worldGameRuleChangeEvent.getGameRule().equals(GameRule.RANDOM_TICK_SPEED)
-					&& worldGameRuleChangeEvent.getValue().equals("10");
-		}));
+				worldGameRuleChangeEvent.getGameRule().equals(GameRule.RANDOM_TICK_SPEED)
+						&& worldGameRuleChangeEvent.getValue().equals("10")));
 	}
 
 	@Test
@@ -1714,7 +1749,6 @@ class WorldMockTest
 	}
 
 	@Test
-	@SuppressWarnings("UnstableApiUsage")
 	void testSendPluginMessageWithPlayers()
 	{
 		WorldMock world = new WorldMock(Material.DIRT, 3);
@@ -1743,7 +1777,7 @@ class WorldMockTest
 		WorldMock world = new WorldMock(Material.DIRT, 3);
 		world.setMetadata("test", new FixedMetadataValue(MockBukkit.createMockPlugin(), "test"));
 		assertEquals(1, world.getMetadata("test").size());
-		assertEquals("test", world.getMetadata("test").get(0).value());
+		assertEquals("test", world.getMetadata("test").getFirst().value());
 	}
 
 	@Test
@@ -1783,9 +1817,7 @@ class WorldMockTest
 	{
 		WorldMock world = new WorldMock(Material.DIRT, 3);
 		Consumer<Zombie> consumer = entity ->
-		{
-			entity.setCustomName("test");
-		};
+				entity.setCustomName("test");
 		Entity entity = world.spawn(new Location(world, 0, 0, 0), Zombie.class, consumer);
 		assertEquals("test", entity.getCustomName());
 	}
@@ -1795,9 +1827,7 @@ class WorldMockTest
 	{
 		WorldMock world = new WorldMock(Material.DIRT, 3);
 		Consumer<Zombie> consumer = entity ->
-		{
-			entity.setCustomName("test");
-		};
+				entity.setCustomName("test");
 		Entity entity = world.spawn(new Location(world, 0, 0, 0), Zombie.class, true, consumer);
 		assertEquals("test", entity.getCustomName());
 	}
@@ -1860,9 +1890,7 @@ class WorldMockTest
 	{
 		WorldMock world = new WorldMock(Material.DIRT, 3);
 		NullPointerException nullPointerException = assertThrows(NullPointerException.class, () ->
-		{
-			world.playEffect(null, Effect.STEP_SOUND, 1);
-		});
+				world.playEffect(null, Effect.STEP_SOUND, 1));
 
 		assertEquals("Location cannot be null", nullPointerException.getMessage());
 	}
@@ -1870,13 +1898,10 @@ class WorldMockTest
 	@Test
 	void testPlayEffectNullEffect()
 	{
-
 		WorldMock world = new WorldMock(Material.DIRT, 3);
 		Location location = new Location(world, 0, 0, 0);
 		NullPointerException nullPointerException = assertThrows(NullPointerException.class, () ->
-		{
-			world.playEffect(location, null, 1);
-		});
+				world.playEffect(location, null, 1));
 
 		assertEquals("Effect cannot be null", nullPointerException.getMessage());
 	}
@@ -1887,10 +1912,7 @@ class WorldMockTest
 		WorldMock world = new WorldMock(Material.DIRT, 3);
 		Location location = new Location(null, 0, 0, 0);
 		NullPointerException nullPointerException = assertThrows(NullPointerException.class, () ->
-		{
-
-			world.playEffect(location, Effect.STEP_SOUND, 1);
-		});
+				world.playEffect(location, Effect.STEP_SOUND, 1));
 
 		assertEquals("World cannot be null", nullPointerException.getMessage());
 	}
@@ -1920,9 +1942,7 @@ class WorldMockTest
 				Sound.BLOCK_ANVIL_BREAK, 1, 1));
 
 		playerMock.assertSoundHeard(Sound.BLOCK_ANVIL_BREAK, (audio) ->
-		{
-			return audio.getVolume() == 1 && audio.getPitch() == 1;
-		});
+				audio.getVolume() == 1 && audio.getPitch() == 1);
 
 	}
 
@@ -1936,9 +1956,7 @@ class WorldMockTest
 				"block.anvil.break", 1, 1));
 
 		playerMock.assertSoundHeard(Sound.BLOCK_ANVIL_BREAK, (audio) ->
-		{
-			return audio.getVolume() == 1 && audio.getPitch() == 1;
-		});
+				audio.getVolume() == 1 && audio.getPitch() == 1);
 	}
 
 	@Test
@@ -1950,9 +1968,7 @@ class WorldMockTest
 		assertDoesNotThrow(() -> world.playSound(playerMock, Sound.BLOCK_ANVIL_BREAK, 1, 1));
 
 		playerMock.assertSoundHeard(Sound.BLOCK_ANVIL_BREAK, (audio) ->
-		{
-			return audio.getVolume() == 1 && audio.getPitch() == 1;
-		});
+				audio.getVolume() == 1 && audio.getPitch() == 1);
 	}
 
 	@Test
@@ -1963,9 +1979,7 @@ class WorldMockTest
 		playerMock.teleport(world.getSpawnLocation());
 		assertDoesNotThrow(() -> world.playSound((Entity) null, Sound.BLOCK_ANVIL_BREAK, 1, 1));
 		assertThrows(AssertionFailedError.class, () -> playerMock.assertSoundHeard(Sound.BLOCK_ANVIL_BREAK, (audio) ->
-		{
-			return audio.getVolume() == 1 && audio.getPitch() == 1;
-		}));
+				audio.getVolume() == 1 && audio.getPitch() == 1));
 	}
 
 	@Test
@@ -1977,9 +1991,7 @@ class WorldMockTest
 		playerMock.teleport(world.getSpawnLocation());
 		assertDoesNotThrow(() -> world2.playSound(playerMock, Sound.BLOCK_ANVIL_BREAK, 1, 1));
 		assertThrows(AssertionFailedError.class, () -> playerMock.assertSoundHeard(Sound.BLOCK_ANVIL_BREAK, (audio) ->
-		{
-			return audio.getVolume() == 1 && audio.getPitch() == 1 && audio.getLocation().getWorld() == world2;
-		}));
+				audio.getVolume() == 1 && audio.getPitch() == 1 && audio.getLocation().getWorld() == world2));
 	}
 
 	@Test
@@ -1990,9 +2002,7 @@ class WorldMockTest
 		playerMock.teleport(world.getSpawnLocation());
 		assertDoesNotThrow(() -> world.playSound(playerMock, (Sound) null, 1, 1));
 		assertThrows(AssertionFailedError.class, () -> playerMock.assertSoundHeard(Sound.BLOCK_ANVIL_BREAK, (audio) ->
-		{
-			return audio.getVolume() == 1 && audio.getPitch() == 1;
-		}));
+				audio.getVolume() == 1 && audio.getPitch() == 1));
 	}
 
 	@Test
@@ -2003,9 +2013,7 @@ class WorldMockTest
 		playerMock.teleport(world.getSpawnLocation());
 		assertDoesNotThrow(() -> world.playSound(playerMock, Sound.ITEM_GOAT_HORN_SOUND_0, null, 1, 1));
 		assertThrows(AssertionFailedError.class, () -> playerMock.assertSoundHeard(Sound.BLOCK_ANVIL_BREAK, (audio) ->
-		{
-			return audio.getVolume() == 1 && audio.getPitch() == 1;
-		}));
+				audio.getVolume() == 1 && audio.getPitch() == 1));
 	}
 
 	@Test
@@ -2391,6 +2399,19 @@ class WorldMockTest
 	}
 
 	@Test
+	void testCoordinateScale()
+	{
+		WorldMock world = new WorldMock(Material.DIRT, 3);
+		assertEquals(1, world.getCoordinateScale());
+
+		world.setEnvironment(World.Environment.NETHER);
+		assertEquals(8, world.getCoordinateScale());
+
+		world.setEnvironment(World.Environment.THE_END);
+		assertEquals(1, world.getCoordinateScale());
+	}
+
+	@Test
 	void testIsFixedTime()
 	{
 		WorldMock world = new WorldMock(Material.DIRT, 3);
@@ -2573,6 +2594,234 @@ class WorldMockTest
 		{
 			world.setAutoSave(isEnabled);
 			assertEquals(isEnabled, world.isAutoSave());
+		}
+
+	}
+
+	@Nested
+	class WorldMockParticleTest
+	{
+
+		private WorldMock world;
+		private Location location;
+
+		@BeforeEach
+		void setUp()
+		{
+			world = server.addSimpleWorld("test");
+			location = new Location(world, 10, 20, 30);
+		}
+
+		@Test
+		void spawnParticle_basicLocationCount_storesCorrectly()
+		{
+			world.spawnParticle(Particle.FLAME, location, 5);
+
+			assertEquals(1, world.getSpawnedParticles().size());
+			SpawnedParticle particle = world.getSpawnedParticles().getFirst();
+
+			assertEquals(Particle.FLAME, particle.particle());
+			assertEquals(10, particle.x());
+			assertEquals(20, particle.y());
+			assertEquals(30, particle.z());
+			assertEquals(5, particle.count());
+			assertNull(particle.receivers());
+			assertNull(particle.source());
+			assertNull(particle.data());
+			assertTrue(particle.force());
+		}
+
+		@Test
+		void spawnParticle_basicCoordinatesCount_storesCorrectly()
+		{
+			world.spawnParticle(Particle.SMOKE, 15, 25, 35, 3);
+
+			SpawnedParticle particle = world.getSpawnedParticles().getFirst();
+
+			assertEquals(Particle.SMOKE, particle.particle());
+			assertEquals(15, particle.x());
+			assertEquals(25, particle.y());
+			assertEquals(35, particle.z());
+			assertEquals(3, particle.count());
+		}
+
+		@Test
+		void spawnParticle_withData_storesData()
+		{
+			String testData = "test_data";
+			world.spawnParticle(Particle.BLOCK, location, 2, testData);
+
+			SpawnedParticle particle = world.getSpawnedParticles().getFirst();
+
+			assertEquals(testData, particle.data());
+			assertEquals(2, particle.count());
+		}
+
+		@Test
+		void spawnParticle_withOffsets_storesOffsets()
+		{
+			world.spawnParticle(Particle.ENCHANT, location, 4, 1.5, 2.5, 3.5);
+
+			SpawnedParticle particle = world.getSpawnedParticles().getFirst();
+
+			assertEquals(1.5, particle.offsetX());
+			assertEquals(2.5, particle.offsetY());
+			assertEquals(3.5, particle.offsetZ());
+		}
+
+		@Test
+		void spawnParticle_withOffsetsAndData_storesAll()
+		{
+			Particle.DustOptions testData = new Particle.DustOptions(Color.RED, 1.0f);
+			world.spawnParticle(Particle.DUST, 5, 10, 15, 7, 0.5, 1.0, 1.5, testData);
+
+			SpawnedParticle particle = world.getSpawnedParticles().getFirst();
+
+			assertEquals(0.5, particle.offsetX());
+			assertEquals(1.0, particle.offsetY());
+			assertEquals(1.5, particle.offsetZ());
+			assertInstanceOf(Particle.DustOptions.class, testData);
+			assertEquals(testData, particle.data());
+		}
+
+		@Test
+		void spawnParticle_withExtra_storesExtra()
+		{
+			world.spawnParticle(Particle.DUST, location, 6, 0.1, 0.2, 0.3, 2.5);
+
+			SpawnedParticle particle = world.getSpawnedParticles().getFirst();
+
+			assertEquals(2.5, particle.extra());
+		}
+
+		@Test
+		void spawnParticle_withExtra_storesExtraObject()
+		{
+			Particle.DustOptions testData = new Particle.DustOptions(Color.RED, 1.0f);
+			world.spawnParticle(Particle.DUST, location, 6, 0.1, 0.2, 0.3, testData);
+
+			SpawnedParticle particle = world.getSpawnedParticles().getFirst();
+
+			assertInstanceOf(Particle.DustOptions.class, testData);
+			assertEquals(testData, particle.data());
+		}
+
+		@Test
+		void spawnParticle_withExtra_storesExtraAndData()
+		{
+			Particle.DustOptions testData = new Particle.DustOptions(Color.RED, 1.0f);
+			world.spawnParticle(Particle.DUST, location, 6, 0.1, 0.2, 0.3, 1.0, testData);
+
+			SpawnedParticle particle = world.getSpawnedParticles().getFirst();
+
+			assertEquals(1.0, particle.extra());
+			assertInstanceOf(Particle.DustOptions.class, testData);
+			assertEquals(testData, particle.data());
+		}
+
+		@Test
+		void spawnParticle_withExtraAndData_storesAll()
+		{
+			Boolean testData = true;
+			world.spawnParticle(Particle.DUST, 1, 2, 3, 8, 0.0, 0.0, 0.0, 1.2, testData);
+
+			SpawnedParticle particle = world.getSpawnedParticles().getFirst();
+
+			assertEquals(1.2, particle.extra());
+			assertEquals(testData, particle.data());
+		}
+
+		@Test
+		void spawnParticle_fullParameters_storesAllCorrectly()
+		{
+			Player player1 = server.addPlayer();
+			Player player2 = server.addPlayer();
+			Player source = server.addPlayer();
+			List<Player> receivers = List.of(player1, player2);
+			String data = "full_test";
+
+			world.spawnParticle(Particle.EXPLOSION, receivers, source, 100, 200, 300, 10, 0.5, 1.0, 1.5, 3.0, data, false);
+
+			SpawnedParticle particle = world.getSpawnedParticles().getFirst();
+
+			assertEquals(Particle.EXPLOSION, particle.particle());
+			assertEquals(List.of(player1, player2), particle.receivers());
+			assertEquals(source, particle.source());
+			assertEquals(100, particle.x());
+			assertEquals(200, particle.y());
+			assertEquals(300, particle.z());
+			assertEquals(10, particle.count());
+			assertEquals(0.5, particle.offsetX());
+			assertEquals(1.0, particle.offsetY());
+			assertEquals(1.5, particle.offsetZ());
+			assertEquals(3.0, particle.extra());
+			assertEquals(data, particle.data());
+			assertFalse(particle.force());
+		}
+
+		@Test
+		void spawnParticle_multipleParticles_tracksAll()
+		{
+			world.spawnParticle(Particle.FLAME, location, 1);
+			world.spawnParticle(Particle.SMOKE, location, 2);
+			world.spawnParticle(Particle.SPLASH, location, 3);
+
+			assertEquals(3, world.getSpawnedParticles().size());
+			assertEquals(Particle.FLAME, world.getSpawnedParticles().getFirst().particle());
+			assertEquals(Particle.SMOKE, world.getSpawnedParticles().get(1).particle());
+			assertEquals(Particle.SPLASH, world.getSpawnedParticles().get(2).particle());
+		}
+
+		@Test
+		void clearSpawnedParticles_removesAllParticles()
+		{
+			world.spawnParticle(Particle.FLAME, location, 1);
+			world.spawnParticle(Particle.SMOKE, location, 2);
+
+			world.clearSpawnedParticles();
+
+			assertTrue(world.getSpawnedParticles().isEmpty());
+		}
+
+		@Test
+		void getSpawnedParticles_returnsImmutableList()
+		{
+			world.spawnParticle(Particle.FLAME, location, 1);
+
+			List<SpawnedParticle> particles = world.getSpawnedParticles();
+
+			assertEquals(1, particles.size());
+			assertTrue(particles instanceof List);
+		}
+
+		@Test
+		void spawnParticle_receiversList_copiesListToAvoidMutation()
+		{
+			Player player = server.addPlayer();
+			List<Player> originalReceivers = new java.util.ArrayList<>();
+			originalReceivers.add(player);
+
+			world.spawnParticle(Particle.FLAME, originalReceivers, null, 0, 0, 0, 1, 0, 0, 0, 1, null, true);
+
+			originalReceivers.clear(); // Modify original list
+
+			SpawnedParticle particle = world.getSpawnedParticles().getFirst();
+			assertEquals(List.of(player), particle.receivers());
+		}
+
+		@Test
+		void spawnParticle_testingTimings()
+		{
+			world.spawnParticle(Particle.FLAME, location, 1);
+
+			assertEquals(1, world.getSpawnedParticles().size());
+			assertEquals(0, world.getSpawnedParticles().getFirst().spawnedAtTick());
+
+			server.getScheduler().performOneTick();
+
+			world.spawnParticle(Particle.FLAME, location, 1);
+			assertEquals(2, world.getSpawnedParticles().size());
+			assertEquals(1, world.getSpawnedParticles().get(1).spawnedAtTick());
 		}
 
 	}
